RESOLVED FIXED 147986
WTF should have a compact Condition object to use with Lock
https://bugs.webkit.org/show_bug.cgi?id=147986
Summary WTF should have a compact Condition object to use with Lock
Filip Pizlo
Reported 2015-08-13 12:49:46 PDT
Patch forthcoming.
Attachments
the patch (33.02 KB, patch)
2015-08-13 13:15 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2015-08-13 13:15:52 PDT
Created attachment 258920 [details] the patch
WebKit Commit Bot
Comment 2 2015-08-13 13:19:12 PDT
Attachment 258920 [details] did not pass style-queue: ERROR: Source/WTF/wtf/ParkingLot.cpp:561: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WTF/Condition.cpp:101: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WTF/Condition.cpp:109: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WTF/Condition.cpp:136: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WTF/Condition.cpp:143: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WTF/Condition.cpp:250: More than one command on the same line [whitespace/newline] [4] Total errors found: 6 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2015-08-13 13:28:19 PDT
Comment on attachment 258920 [details] the patch r=me
Filip Pizlo
Comment 4 2015-08-13 13:42:51 PDT
Note You need to log in before you can comment on or make changes to this bug.